--- a/package.json
+++ b/package.json
@@ -26,11 +26,17 @@
     "@builder.io/qwik": "^1.17.2",
     "@builder.io/qwik-city": "^1.17.2",
     "@eslint/js": "latest",
+    "@tailwindcss/vite": "^4.1.4",
     "@types/node": "20.19.0",
+    "autoprefixer": "^10.4.22",
+    "daisyui": "^5.5.8",
     "eslint": "9.32.0",
     "eslint-plugin-qwik": "^1.17.2",
     "globals": "16.4.0",
+    "postcss": "^8.5.6",
     "prettier": "3.6.2",
+    "prettier-plugin-tailwindcss": "^0.6.11",
+    "tailwindcss": "^4.1.4",
     "typescript": "5.4.5",
     "typescript-eslint": "8.38.0",
     "typescript-plugin-css-modules": "latest",
